--- a/PyTic/main.py.ipynb
+++ b/PyTic/main.py.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import tkinter as tk # GUI"
+    "import tkinter as tk # GUI\n",
+    "import math"
    ]
   },
   {
@@ -27,6 +28,91 @@
     "        self.over = False\n",
     "        self.turn = -1 # start with the human player\n",
     "        \n",
+    "    def isWinner(self):\n",
+    "        s = self.state\n",
+    "        for i in range(3):\n",
+    "            # horizontal\n",
+    "            if all([x == self.turn for x in s[3*i:3*i+3]]):\n",
+    "                return True\n",
+    "            # vertical\n",
+    "            if all([x == self.turn for x in [s[i], s[i+3], s[i+6]]]):\n",
+    "                return True\n",
+    "            # negative slope diagonal\n",
+    "            if all([x == self.turn for x in [s[0], s[4], s[8]]]):\n",
+    "                return True\n",
+    "            # positive slope diagonal\n",
+    "            if all([x == self.turn for x in [s[2], s[4], s[6]]]):\n",
+    "                return True\n",
+    "\n",
+    "            return False # no winner\n",
+    "    \n",
+    "    # helper function for evaluating score of a game state\n",
+    "    # RETURNS: score of a 3-element window in a game state\n",
+    "    def evaluateWindow(self, window):\n",
+    "        score = 0\n",
+    "        numPlayer = window.count(self.turn)\n",
+    "        numOpp = window.count(-self.turn)\n",
+    "        numEmpty = window.count(0)\n",
+    "        \n",
+    "        if numPlayer == 3:\n",
+    "            # bro just won, this is the branch to go to\n",
+    "            score += 100\n",
+    "        \n",
+    "        else if (numPlayer == 2 and numEmpty == 1):\n",
+    "            # bro is about to win\n",
+    "            score += 10\n",
+    "        \n",
+    "        else if (numPlayer == 1 and numEmpty == 2):\n",
+    "            score += 2\n",
+    "        \n",
+    "        else if (numOpponent == 2 and numEmpty == 1):\n",
+    "            # bro is about to lose, don't go here\n",
+    "            score -= 5\n",
+    "        \n",
+    "        return score\n",
+    "            \n",
+    "    \n",
+    "    # evaluates score of a player in current game state\n",
+    "    # RETURNS: \n",
+    "        # positive if player is winning\n",
+    "        # negative if player is losing\n",
+    "        # 0 if draw\n",
+    "    def evaluateState(self):\n",
+    "        s = self.state\n",
+    "        \n",
+    "        for pos in range(3):\n",
+    "            # score of horizontals\n",
+    "            score += evaluateWindow(s[3*pos:3*pos+3])\n",
+    "            # score of verticals\n",
+    "            score += evaluateWindow([s[i], s[pos+3], s[pos+6]])\n",
+    "            # score of diagonals\n",
+    "            score += evaluateWindow([s[0], s[4], s[8]])\n",
+    "            score += evaluateWindow([s[2], s[4], s[6]])\n",
+    "        \n",
+    "        return score\n",
+    "        \n",
+    "    \n",
+    "    def isTerminatingNode(self):\n",
+    "        return self.state.isWinner()\n",
+    "    \n",
+    "    # will go through all game states since game is only 3x3\n",
+    "    def minimax(self, state, maximizingPlayer):\n",
+    "        # if terminating node:\n",
+    "        # TERMINATING: board is full or win has occurred\n",
+    "        # RETURN heuristic value of node\n",
+    "        if (all([x != 0 for x in state]) or checkWin())\n",
+    "        \n",
+    "        # maximizing player, AI\n",
+    "        if maximizingPlayer:\n",
+    "            value = -math.infinity\n",
+    "            for child in range(3):\n",
+    "                \n",
+    "                \n",
+    "        # minimizing player, human\n",
+    "        else:\n",
+    "            value = math.infinity\n",
+    "        \n",
+    "        \n",
     "    def step(self, pos):\n",
     "        if (self.state[pos] != 0):\n",
     "            # position already filled\n",
@@ -34,34 +120,13 @@
     "            return False\n",
     "        self.state[pos] = self.turn\n",
     "        \n",
-    "        # check if move made win\n",
-    "        if (game.isWinner()):\n",
-    "            print(\"Winner!\")\n",
-    "        \n",
     "        if (self.turn == -1):\n",
     "            # switch to AI\n",
     "            self.turn = 1\n",
     "        else:\n",
     "            # switch to human\n",
     "            self.turn = -1\n",
-    "    \n",
-    "    def isWinner(self):\n",
-    "        for i in range(3):\n",
-    "            # horizontal\n",
-    "            if all([x == self.turn for x in self.state[3*i:3*i+3]]):\n",
-    "                return True\n",
-    "            # vertical\n",
-    "            if all([x == self.turn for x in [self.state[i], self.state[i+3], self.state[i+6]]]):\n",
-    "                return True\n",
-    "            # negative slope diagonal\n",
-    "            if all([x == self.turn for x in [self.state[0], self.state[4], self.state[8]]]):\n",
-    "                return True\n",
-    "            # positive slope diagonal\n",
-    "            if all([x == self.turn for x in [self.state[2], self.state[4], self.state[6]]]):\n",
-    "                return True\n",
-    "            \n",
-    "            return False # no winner\n",
-    "            \n",
+    "                \n",
     "    def printBoard(self):\n",
     "        print(self.state.reshape(3, 3))\n",
     "    \n",
@@ -89,7 +154,8 @@
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    game = TicTacToe()"
+    "    game = TicTacToe()\n",
+    "    "
    ]
   },
   {
