not using connection-based eval fxn

--- a/PyTic/main.py.ipynb
+++ b/PyTic/main.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "c8049e31",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65f1290a",
+   "metadata": {},
+   "source": [
+    "### AI Evaluation\n",
+    "There are two evaluation functions we can implement in our AI via the minimax algorithm:\n",
+    "1. Score based on win, lose, or draw\n",
+    "2. Score based on number of connections that can be made  \n",
+    "\n",
+    "Since this game is fairly simple (just a 3x3 board), we will use the first evaluation method"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "id": "84778c38",
    "metadata": {},
    "outputs": [],
@@ -28,48 +41,51 @@
     "        self.over = False\n",
     "        self.turn = -1 # start with the human player\n",
     "        \n",
-    "    def isWinner(self):\n",
+    "    def isWinner(self, player):\n",
     "        s = self.state\n",
     "        for i in range(3):\n",
     "            # horizontal\n",
-    "            if all([x == self.turn for x in s[3*i:3*i+3]]):\n",
+    "            if all([x == player for x in s[3*i:3*i+3]]):\n",
     "                return True\n",
     "            # vertical\n",
-    "            if all([x == self.turn for x in [s[i], s[i+3], s[i+6]]]):\n",
+    "            if all([x == player for x in [s[i], s[i+3], s[i+6]]]):\n",
     "                return True\n",
     "            # negative slope diagonal\n",
-    "            if all([x == self.turn for x in [s[0], s[4], s[8]]]):\n",
+    "            if all([x == player for x in [s[0], s[4], s[8]]]):\n",
     "                return True\n",
     "            # positive slope diagonal\n",
-    "            if all([x == self.turn for x in [s[2], s[4], s[6]]]):\n",
+    "            if all([x == player for x in [s[2], s[4], s[6]]]):\n",
     "                return True\n",
     "\n",
     "            return False # no winner\n",
     "    \n",
     "    # helper function for evaluating score of a game state\n",
     "    # RETURNS: score of a 3-element window in a game state\n",
-    "    def evaluateWindow(self, window):\n",
-    "        score = 0\n",
-    "        numPlayer = window.count(self.turn)\n",
-    "        numOpp = window.count(-self.turn)\n",
-    "        numEmpty = window.count(0)\n",
+    "#     def evaluateWindow(self, window):\n",
+    "#         score = 0\n",
+    "#         maxScore = 100\n",
+    "#         slotScore = 2\n",
+    "#         numPlayer = window.count(self.turn)\n",
+    "#         numOpp = window.count(-self.turn)\n",
+    "#         numEmpty = window.count(0)\n",
     "        \n",
-    "        if numPlayer == 3:\n",
-    "            # bro just won, this is the branch to go to\n",
-    "            score += 100\n",
+    "#         if numPlayer == 3:\n",
+    "#             # bro just won, WE GO TO THIS PATH\n",
+    "#             score += maxScore\n",
+    "            \n",
+    "#         elif numPlayer == 2 and numEmpty == 1:\n",
+    "#             # two connections\n",
+    "#             score += slotScore * numPlayer\n",
     "        \n",
-    "        else if (numPlayer == 2 and numEmpty == 1):\n",
-    "            # bro is about to win\n",
-    "            score += 10\n",
+    "#         elif numPlayer == 1 and numEmpty == 2:\n",
+    "#             # one connection\n",
+    "#             score += slotScore * numPlayer\n",
     "        \n",
-    "        else if (numPlayer == 1 and numEmpty == 2):\n",
-    "            score += 2\n",
-    "        \n",
-    "        else if (numOpponent == 2 and numEmpty == 1):\n",
-    "            # bro is about to lose, don't go here\n",
-    "            score -= 5\n",
-    "        \n",
-    "        return score\n",
+    "#         if numOpp == 2 and numEmpty == 1:\n",
+    "#             # bro is about to lose, WE DON'T DO THAT\n",
+    "#             score -= maxScore\n",
+    "               \n",
+    "#        return score\n",
     "            \n",
     "    \n",
     "    # evaluates score of a player in current game state\n",
@@ -77,40 +93,32 @@
     "        # positive if player is winning\n",
     "        # negative if player is losing\n",
     "        # 0 if draw\n",
-    "    def evaluateState(self):\n",
-    "        s = self.state\n",
+    "#     def evaluateState(self):\n",
+    "#         s = self.state\n",
     "        \n",
-    "        for pos in range(3):\n",
-    "            # score of horizontals\n",
-    "            score += evaluateWindow(s[3*pos:3*pos+3])\n",
-    "            # score of verticals\n",
-    "            score += evaluateWindow([s[i], s[pos+3], s[pos+6]])\n",
-    "            # score of diagonals\n",
-    "            score += evaluateWindow([s[0], s[4], s[8]])\n",
-    "            score += evaluateWindow([s[2], s[4], s[6]])\n",
+    "#         for pos in range(3):\n",
+    "#             # score of horizontals\n",
+    "#             score += evaluateWindow(s[3*pos:3*pos+3])\n",
+    "#             # score of verticals\n",
+    "#             score += evaluateWindow([s[i], s[pos+3], s[pos+6]])\n",
+    "#             # score of diagonals\n",
+    "#             score += evaluateWindow([s[0], s[4], s[8]])\n",
+    "#             score += evaluateWindow([s[2], s[4], s[6]])\n",
     "        \n",
-    "        return score\n",
-    "        \n",
+    "#         return score\n",
     "    \n",
+    "    # Does the current game state in game tree lead to a win or a draw?\n",
     "    def isTerminatingNode(self):\n",
-    "        return self.state.isWinner()\n",
+    "        return self.isWinner(-1) or self.isWinner(1) or all([x != 0 for x in state]) \n",
     "    \n",
     "    # will go through all game states since game is only 3x3\n",
     "    def minimax(self, state, maximizingPlayer):\n",
     "        # if terminating node:\n",
     "        # TERMINATING: board is full or win has occurred\n",
     "        # RETURN heuristic value of node\n",
-    "        if (all([x != 0 for x in state]) or checkWin())\n",
+    "        #if (all([x != 0 for x in state]) or checkWin())\n",
+    "        pass\n",
     "        \n",
-    "        # maximizing player, AI\n",
-    "        if maximizingPlayer:\n",
-    "            value = -math.infinity\n",
-    "            for child in range(3):\n",
-    "                \n",
-    "                \n",
-    "        # minimizing player, human\n",
-    "        else:\n",
-    "            value = math.infinity\n",
     "        \n",
     "        \n",
     "    def step(self, pos):\n",
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "66ea5d82",
    "metadata": {
     "scrolled": true
@@ -145,17 +153,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Winner!\n",
-      "[[-1  1  1]\n",
-      " [ 0 -1  0]\n",
-      " [ 0  0 -1]]\n"
+      "Test: 0\n",
+      "0\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
     "    game = TicTacToe()\n",
-    "    "
+    "    print(game.evaluateWindow([-1, 0, 0]))"
    ]
   },
   {
