--- a/PyTic/main.py.ipynb
+++ b/PyTic/main.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c8049e31",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "84778c38",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "66ea5d82",
    "metadata": {
     "scrolled": true
@@ -189,22 +189,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pick position on the board (0-8): 0\n",
+      "Pick position on the board (0-8): 2\n",
       "AI made a move in position 4.\n",
-      "[[-1  0  0]\n",
+      "[[ 0  0 -1]\n",
       " [ 0  1  0]\n",
       " [ 0  0  0]]\n",
-      "Pick position on the board (0-8): 1\n",
-      "AI made a move in position 2.\n",
-      "[[-1 -1  1]\n",
+      "Pick position on the board (0-8): 0\n",
+      "AI made a move in position 1.\n",
+      "[[-1  1 -1]\n",
       " [ 0  1  0]\n",
       " [ 0  0  0]]\n",
-      "Pick position on the board (0-8): 3\n",
-      "AI made a move in position 6.\n",
-      "[[-1 -1  1]\n",
-      " [-1  1  0]\n",
-      " [ 1  0  0]]\n",
-      "AI won!\n"
+      "Pick position on the board (0-8): 7\n",
+      "AI made a move in position 3.\n",
+      "[[-1  1 -1]\n",
+      " [ 1  1  0]\n",
+      " [ 0 -1  0]]\n",
+      "Pick position on the board (0-8): 5\n",
+      "AI made a move in position 8.\n",
+      "[[-1  1 -1]\n",
+      " [ 1  1 -1]\n",
+      " [ 0 -1  1]]\n",
+      "Pick position on the board (0-8): 6\n",
+      "[[-1  1 -1]\n",
+      " [ 1  1 -1]\n",
+      " [-1 -1  1]]\n",
+      "Draw. You and the AI are too smart.\n"
      ]
     }
    ],
@@ -234,11 +243,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79d81d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
